# LeafScan_Leaf_Matching

./: .gitignore  README.md  add_leaf_id_column.py  build_ground_truth.py  check_smoothing_effect.py  create_test_split.py  defoliated_test.py  demo.py  extract_leaf_test.py  extract_reconstruction.py  normalize_leaf.py  normalize_test.py  pyproject.toml  requirements.txt  stage3_defoliated_embeddings.py  stage3_healthy_embeddings.py  stage4_geometry.py  stage5_matching.py  stage5_visualize.py  stage6_add_gt.py  stage6_relative_features.py  stage7_regression.py  update_dataset.py  update_gt.py
cache/: healthy_leaf_ids.txt
compute_node/: app.py
compute_node/cache/: emb.npy  geom.csv  ids.txt
core/: extract_leaf.py
data_node/: app.py
leafmatchingmodel/: __init__.py  model.py  predict.py
leafmatchingmodel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
leafmatchingmodel/core/: __init__.py  defoliation.py  embedding.py  extract_leaf.py  geometry.py  match.py
leafmatchingmodel/files/: __init__.py  emb.npy  model.pkl
leafmatchingmodel/utils/: __init__.py  io.py  paths.py
matching_model/: setup.py
matching_model/leaf_matching/: match.py  predict.py
matching_model/leaf_matching.egg-info/: SOURCES.txt  top_level.txt
outputs/: image_map.pkl
outputs/embeddings/: simulated_embeddings.npy  simulated_leaf_ids.txt
outputs/features/: gt_mapping - Copy.csv  gt_mapping.csv  phase1_geometry.csv  stage5_output.csv  stage6_output.csv  stage6_with_gt.csv
queue_app/: app.py
test/: performance.py  predict.py  test.py
web_app/: app.py
(+9 files in other folders)
